--- a/github.html
+++ b/github.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <img src="img/tela-github-eu.jpg" alt="Github">
-    <a href="https://github.com/gustavoguanabara" target="_blank">ACESSE</a>
+    <a href="https://github.com/gustafigueiredo" target="_blank">ACESSE</a>
 </body>
 </html>
